# RL_GRPO_Monitor

./: .gitignore  AGENTS.md  README.md  TASK.md  analyze_rollout.py  app.py  demo.py  download.py  install.sh  launch_verl.py  macro.py  monitor_gpu.py  plugin.py  plugin_rollout.py  plugin_verl.py  prepare_data.py  pyproject.toml  pyrightconfig.json  requirements.txt  rollout_stats.py  run.py  setup.py
docs/: amd_smi_diagnostic.md  grpo_monitor_event_semantics.md
monitor/: __init__.py  __main__.py  amdsmi_diag.py  events.py  monitor.py  monitor_gpu_amd.py  monitor_gpu_nvidia.py  rollout_stats.py
monitor/integrations/: __init__.py  base.py  ms_swift.py  verl.py
requirements/: requirements-amd.txt  requirements-common.txt  requirements-cpu.txt  requirements-nvidia.txt
