[project]
name = "rl-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "pandas",
    "plotly",
    "dotenv",
    "nvidia-ml-py",
    "huggingface_hub>=0.34.0,<1.0",
    "accelerate",
    "msgspec",
    "deepspeed>=0.18.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
