[project]
name = "rl-grpo-monitor"
version = "0.1.0"
description = "Reusable GPU and phase monitor for RL/GRPO training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gradio",
    "pandas",
    "plotly",
    "python-dotenv",
]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py"]
amd = ["amdsmi"]
data = [
    "datasets",
    "huggingface_hub>=0.34.0,<1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
